[package]
name = "sit"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
crossterm = "0.25"
dirs = "6"
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = { version = "0.8", features = ["preserve_order"] }


[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
